# rest

./: .gitignore  .hlint.yaml  LICENSE  README.md  rest-rewrite.cabal  rest.cabal  shell.nix  stack.yaml
.github/workflows/: hlint.yml  workflow.yaml
scripts/: hlint-all.sh
src/: Arith.hs  BagExample.hs  DSL.hs  Lists.hs  Main.hs  MultisetOrdering.hs  Nat.hs  Set.hs
src/Language/: REST.hs
src/Language/REST/: AbstractOC.hs  ConcreteOC.hs  Core.hs  Dot.hs  EquivalenceClass.hs  ExploredTerms.hs  KBO.hs  LPO.hs  MetaTerm.hs  MultiSet.hs  MultisetOrder.hs  OCAlgebra.hs  OCToAbstract.hs  Op.hs  OpOrdering.hs  OrderingConstraints.hs  PartialOrder.hs  Path.hs  ProofGen.hs  RESTDot.hs  RPO.hs  Rest.hs  Rewrite.hs  RewriteRule.hs  RuntimeTerm.hs  SMT.hs  Set.hs  Types.hs  Util.hs  WQO.hs  WQOConstraints.hs  WorkList.hs  WorkStrategy.hs
src/Language/REST/Internal/: EquivalenceClass.hs  ListT.hs  MultiSet.hs  MultisetOrder.hs  OpOrdering.hs  Orphans.hs  PartialOrder.hs  Rewrite.hs  Util.hs  WQO.hs  WorkStrategy.hs
src/Language/REST/OrderingConstraints/: ADT.hs  Lazy.hs  Strict.hs
src/Language/REST/WQOConstraints/: ADT.hs  Lazy.hs  Strict.hs
test/: BagExample.hs  Compiler.hs  ExploredTerms.hs  Group.hs  KBO.hs  LazyOC.hs  Lists.hs  Main.hs  Multiset.hs  MultisetOrder.hs  NonTerm.hs  OpOrdering.hs  QuickCheckTests.hs  RPO.hs  SMT.hs  StrictOC.hs  Test.hs  WQO.hs  WQODot.hs
testlib/: Arith.hs  Compiler.hs  DSL.hs  Group.hs  Multiset.hs  MultisetOrdering.hs  Nat.hs  NonTerm.hs  Set.hs  WQODot.hs
testlib/Language/REST/: ConcreteOC.hs  ProofGen.hs
vcoop/: Original.hs  Rewrite.hs  SetProof.hs
