name:               rest
build-type:         Simple
version:            0.1
cabal-version:      >= 1.22

library
  default-language:  Haskell2010
  exposed-modules:
    Language.REST
    Language.REST.AbstractOC
    Language.REST.Core
    Language.REST.ExploredTerms
    Language.REST.MetaTerm
    Language.REST.Dot
    Language.REST.RESTDot
    Language.REST.Op
    Language.REST.OrderingConstraints
    Language.REST.OrderingConstraints.Strict
    Language.REST.OrderingConstraints.Lazy
    Language.REST.OrderingConstraints.ADT
    Language.REST.Path
    Language.REST.Rest
    Language.REST.RewriteRule
    Language.REST.RuntimeTerm
    Language.REST.SMT
    Language.REST.Types
  other-modules:
    Language.REST.WorkStrategy
    Language.REST.EquivalenceClass
    Language.REST.MultiSet
    Language.REST.MultisetOrder
    Language.REST.OCToAbstract
    Language.REST.OpOrdering
    Language.REST.PartialOrder
    Language.REST.Rewrite
    Language.REST.RPO
    Language.REST.WQO

  hs-source-dirs: src
  build-depends:  base >= 4.7
                , containers
                , hashable
                , process
                , parsec
                , mtl
                , unordered-containers
                , text >= 1.2.2

Test-Suite test-rest
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test src
  build-depends:  base
                , hashable
                , containers
                , parsec
                , QuickCheck
                , mtl
                , unordered-containers
                , text
                , process
  other-modules:
    Arith
    DSL
    Language.REST.MultiSet
    Language.REST.AbstractOC
    Language.REST.Core
    Language.REST.EquivalenceClass
    Language.REST.ExploredTerms
    Language.REST.MetaTerm
    Language.REST.MultisetOrder
    Language.REST.OCToAbstract
    Language.REST.Op
    Language.REST.OpOrdering
    Language.REST.OrderingConstraints
    Language.REST.OrderingConstraints.ADT
    Language.REST.OrderingConstraints.Lazy
    Language.REST.OrderingConstraints.Strict
    Language.REST.PartialOrder
    Language.REST.Path
    Language.REST.RPO
    Language.REST.Rest
    Language.REST.Rewrite
    Language.REST.RewriteRule
    Language.REST.RuntimeTerm
    Language.REST.Types
    Language.REST.WorkStrategy
    Language.REST.WQO
    Language.REST.SMT
    MultisetOrder
    Nat
    OpOrdering
    QuickCheckTests
    RPO
    StrictOC
    WQO



executable rest
  main-is: Main.hs
  -- ghc-plugins: -fplugin=LiquidHaskell
  build-depends:  base >= 4.7
                , containers
                , hashable
                , process
                , QuickCheck
                , parsec
                , mtl
                , monad-loops
                , unordered-containers >= 0.2.11
                , text >= 1.2.2
                , time
                -- , liquidhaskell
                -- , liquid-base
  default-language:  Haskell2010
  other-modules:
      Arith
      BagExample
      DSL
      Group
      Language.REST.AbstractOC
      Language.REST.ConcreteOC
      Language.REST.Core
      Language.REST.EquivalenceClass
      Language.REST.ExploredTerms
      Language.REST.MetaTerm
      Language.REST.MultiSet
      Language.REST.MultisetOrder
      Language.REST.OCToAbstract
      Language.REST.Op
      Language.REST.OpOrdering
      Language.REST.OrderingConstraints
      Language.REST.OrderingConstraints.ADT
      Language.REST.OrderingConstraints.Lazy
      Language.REST.OrderingConstraints.Strict
      Language.REST.PartialOrder
      Language.REST.Path
      Language.REST.RPO
      Language.REST.Rest
      Language.REST.Rewrite
      Language.REST.RewriteRule
      Language.REST.RuntimeTerm
      Language.REST.Types
      Language.REST.WorkStrategy
      Language.REST.WQO
      Language.REST.SMT
      Compiler
      Lists
      Multiset
      MultisetOrdering
      Nat
      NonTerm
      WQODot
      Language.REST.Dot
      Language.REST.RESTDot

  hs-source-dirs: src
